# Generador-Hojas-Emergencia

./: .gitattributes  .gitignore  ACTUALIZADOR.spec  GENERADOR DE HOJAS 4.1.spec  README.md  RELEASE_NOTES_4.1.md  SumatraPDF-settings.txt  actualizador.py  facturacion_tabs (1).py  pyproject.toml
emergency_core/: __init__.py  backup.py  db_migrations.py  io_utils.py  paths.py  security.py  updater.py
packaging/: README.md  THIRD_PARTY_NOTICES.txt  app.manifest  assets.sha256  build_release.ps1  version_info.txt
pyinstaller_hooks/: runtime_tk.py
pyinstaller_hooks/pre_find_module_path/: hook-tkinter.py
tests/: conftest.py  test_app_integration.py  test_backup.py  test_db_migrations.py  test_paths_and_io.py  test_security.py  test_updater.py
