[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "generador-hojas-emergencia"
version = "4.1.7"
description = "Aplicacion de escritorio para formularios de emergencia"
requires-python = ">=3.14,<3.15"
dependencies = [
  "openpyxl==3.1.5",
  "pillow==12.1.1",
  "PyPDF2==3.0.1",
  "reportlab==4.4.10",
  "ttkbootstrap==1.20.2",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.19.0",
  "pytest==9.0.2",
  "ruff==0.15.20",
]

[tool.setuptools]
packages = ["emergency_core"]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = [
  "ARCHIVO_DIARIO",
  "BACKUPS",
  "build",
  "dist",
  "ENTREGA GENERADOR 4.0",
  "release",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"facturacion_tabs (1).py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
